package de.swiss.model;

public enum Action {
    COOPERATION, DEFECTION
}
